@@ -1,10 +1,10 @@
 {
-  "count": 23,
+  "count": 22,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-09-24T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
